# MixSplitR

./: .gitignore  MixSplitR.py  README.MD  pyproject.toml
docs/: development-guide.md  module-map.md
mixsplitr/: __init__.py  bootstrapping.py  cli.py  mixsplitr_core.py  mixsplitr_editor.py  mixsplitr_identify.py  mixsplitr_manifest.py  mixsplitr_menu.py  mixsplitr_menus.py  mixsplitr_pipeline.py  mixsplitr_processing.py  mixsplitr_record.py  mixsplitr_session.py  mixsplitr_tagging.py  orchestration.py  splitter_ui.py
packaging/: MixSplitR_ONEFILE.spec
